; ModuleID = '/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_tests.c_test_constant_wnaf_negate.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_tests.c_test_constant_wnaf_negate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_constant_wnaf_negate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %4, align 4
  store i32 1, i32* %5, align 4
  store i32 1, i32* %6, align 4
  %11 = call i32 @secp256k1_scalar_get_bits(i32* %3, i32 0, i32 1)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %1
  %14 = call i32 @secp256k1_scalar_negate(i32* %3, i32* %3)
  store i32 -1, i32* %5, align 4
  br label %15

15:                                               ; preds = %13, %1
  %16 = call i32 @secp256k1_scalar_is_even(i32* %4)
  %17 = call i32 @secp256k1_scalar_cond_negate(i32* %4, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp eq i32 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @CHECK(i32 %21)
  %23 = call i32 @secp256k1_scalar_eq(i32* %3, i32* %4)
  %24 = call i32 @CHECK(i32 %23)
  ret void
}

declare dso_local i32 @secp256k1_scalar_get_bits(i32*, i32, i32) #1

declare dso_local i32 @secp256k1_scalar_negate(i32*, i32*) #1

declare dso_local i32 @secp256k1_scalar_cond_negate(i32*, i32) #1

declare dso_local i32 @secp256k1_scalar_is_even(i32*) #1

declare dso_local i32 @CHECK(i32) #1

declare dso_local i32 @secp256k1_scalar_eq(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
